--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>GREENBELT NOW</title>
+    <!-- icons -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="footer">
+        <a href="mailto:s.nguyen11@utexas.edu" target="_blank"><i class="far fa-envelope"></i></a>
+        <a href="https://www.instagram.com/serenanguyen_/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/serenanguyenatx/" target="_blank"><i class="fab fa-linkedin"></i></a>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
